@@ -4,6 +4,7 @@ Date: 03.07.2024
   Bugfixes:
     - Crash on game start with Space Exploration
     - Fix issues with created surfaces in Space Exploration
+    - Fix crash related to old SE vault surface
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 03.07.2024
